--- a/app/src/main/res/layout/booking_user_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_pending_item_layout.xml
@@ -313,9 +313,12 @@
 
                     </LinearLayout>
 
-                    <Space
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/seatChip"
                         android:layout_width="match_parent"
-                        android:layout_height="6dp" />
+                        android:layout_height="wrap_content"
+                        android:scrollbars="horizontal"
+                        app:singleLine="true" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
