--- a/app/src/main/res/layout/booking_admin_history_item_layout.xml
+++ b/app/src/main/res/layout/booking_admin_history_item_layout.xml
@@ -492,21 +492,25 @@
                             android:textSize="16sp" />
                     </LinearLayout>
 
-                    <com.google.android.material.chip.ChipGroup
-                        android:id="@+id/seatChip"
+                    <HorizontalScrollView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="8dp"
-                        android:scrollbars="horizontal"
-                        app:singleLine="true" />
+                        android:scrollbars="none">
+
+                        <com.google.android.material.chip.ChipGroup
+                            android:id="@+id/seatChip"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:singleLine="true" />
+                    </HorizontalScrollView>
 
                     <TextView
                         android:id="@+id/timestamp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:gravity="end"
                         android:fontFamily="@font/lato"
+                        android:gravity="end"
                         android:maxLines="1"
                         android:text=""
                         android:textColor="#99121212"
