--- a/app/src/main/res/menu/booking_pending_user_menu.xml
+++ b/app/src/main/res/menu/booking_pending_user_menu.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/btnChat"
+        android:title="Open Conversation" />
+
+    <item
         android:id="@+id/btnCancelBooking"
         android:title="Cancel Booking" />
 
