--- a/app/src/main/res/menu/booking_pending_transport_menu.xml
+++ b/app/src/main/res/menu/booking_pending_transport_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/btnConfirmBooking"
+        android:title="Confirm Booking" />
+
+    <item
         android:id="@+id/btnCancelBooking"
         android:title="Cancel Booking" />
 
