--- a/app/src/main/res/layout/dialog_user_scan_layout_rental.xml
+++ b/app/src/main/res/layout/dialog_user_scan_layout_rental.xml
@@ -144,6 +144,20 @@
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
                             android:maxLines="1"
+                            android:text="Transport Provider:"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="6dp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Pick-Up Location:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -242,6 +256,21 @@
 
                         <TextView
                             android:id="@+id/rentContactNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="6dp" />
+
+                        <TextView
+                            android:id="@+id/rentTransportCompany"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
